# uptime-ferris

./: Cargo.toml  LICENSE  README.md
migrations_pg/: 20250309163130_init.sql  20250323220653_add_usermgmt.sql
migrations_sq/: 20250313211202_init.sql  20250323220700_add_usermgmt.sql
src/: argument_parsing.rs  main.rs  postgres_queries.rs  shared_queries.rs  sqlite.rs  sqlite_queries.rs
templates/: base.html  index.html
