[package]
name = "uptime-ferris"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.8.1"
chrono = { version = "0.4.40", features = ["clock", "serde"] }
clap = { version = "4.5.31", features = ["derive", "env"] }
futures-util = "0.3.31"
reqwest = "0.12.12"
serde = { version = "1.0.218", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "sqlite", "macros", "chrono"] }
tokio = { version = "1.44.0", features = ["full"] }
validator = { version = "0.20.0", features = ["derive"] }
